--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-grid-ultra",
-  "version": "3.5.0",
+  "version": "3.7.0",
   "description": "A react data table implementation using @mui.",
   "author": "xantos008",
   "files": [
@@ -35,6 +35,7 @@
     "data-grid"
   ],
   "scripts": {
+    "ts:check": "tsc",
     "compile": "rm -rf build && tsc && cp package.json build && cp README.md build && cp LICENSE build",
     "clean": "rm -rf dist",
     "build:simple": "npm run clean && rollup -c --bundleConfigAsCjs",
@@ -48,13 +49,13 @@
     "url": "https://github.com/xantos008/data-grid-ultra.git"
   },
   "dependencies": {
-    "@babel/runtime": "^7.22.15",
+    "@babel/runtime": "^7.23.6",
     "@emotion/styled": "^11.11.0",
-    "@mui/utils": "^5.14.8",
-    "@mui/x-data-grid": "6.15.0",
-    "@types/format-util": "^1.0.2",
+    "@mui/utils": "^5.14.16",
+    "@mui/x-data-grid": "6.18.4",
+    "@types/format-util": "^1.0.3",
     "clsx": "^2.0.0",
-    "data-grid-extra": "^3.6.0",
+    "data-grid-extra": "^3.7.0",
     "exceljs": "^4.3.0",
     "prop-types": "^15.8.1",
     "reselect": "^4.1.8",
@@ -67,18 +68,20 @@
     "react-dom": "^17.0.2 || ^18.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.22.15",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-url": "^8.0.1",
+    "@babel/plugin-transform-runtime": "^7.23.6",
+    "@babel/traverse": "^7.23.6",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-url": "^8.0.2",
     "@types/node": "^18.14.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-typescript2": "^0.35.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   },
   "resolutions": {
-    "csstype": "3.0.10"
+    "csstype": "3.0.10",
+    "@babel/traverse": "^7.23.6"
   }
 }
